@startuml Entity

package typeorm {
  class "@Entity" as Entity
  hide Entity circle
  class "@Column" as Column
  hide Column circle
  class "@PrimaryColumn" as PrimaryColumn
  hide PrimaryColumn circle
  class "@OneToMany" as OneToMany
  hide OneToMany circle
  class "@JoinColumn" as JoinColumn
  hide JoinColumn circle
  class "@ManyToOne" as ManyToOne
  hide ManyToOne circle
  class "@CreateDateColumn" as CreateDateColumn
  hide CreateDateColumn circle
  class "@UpdateDateColumn" as UpdateDateColumn
  hide UpdateDateColumn circle
}

package haus.entity {
  class "type HausArt = 'BUNGALOW' | 'MEHRFAMILIENHAUS' | 'REIHENHAUS' | 'VILLA'" as HausArt
  hide HausArt circle

  class Haus <<entity>> <<@Entity>> {
    @Column() @PrimaryColumn() readonly id: number
    @Column() readonly version: number
    @Column() readonly hausflaeche: number
    @Column() readonly art: HausArt
    @Column() readonly preis: number
    @Column() readonly verkaeuflich: boolean
    @Column() readonly baudatum: Date
    @Column() readonly katalog?: string
    @Column() readonly features?: string
    @CreateDateColumn() readonly erzeugt: Date
    @UpdateDateColumn() readonly aktualisiert: Date
  }

  class Adresse <<entity>> <<@Entity>> {
    @Column() @PrimaryColumn() readonly id: number
    @Column() readonly strasse: string
    @Column() readonly hausnummer: number
    @Column() readonly plz: string
  }

  class Personen <<entity>> <<@Entity>> {
    @Column() @PrimaryColumn() readonly id: number
    @Column() readonly vorname: string
    @Column() readonly nachname: string
    @Column() readonly eigentuemer: boolean
  }

  Haus *--> "1" Adresse : @OneToOne() \nadresse
  Haus *--> "*" Personen : @OneToMany() \nPersonen

  Haus .right.> Entity
  Haus .right.> HausArt
}

hide empty members

@enduml
